fix hiding of collapse indicators in preview mode

--- a/source.css
+++ b/source.css
@@ -1,6 +1,6 @@
 /* ───────────────────────────────────────────────────
 SHIMMERING FOCUS by @pseudometa
-Version 1.994
+Version 1.995
 Source CSS: https://github.com/chrisgrieser/shimmering-focus/blob/main/source.css
 MIT License
 ──────────────────────────────────────────────────── */
@@ -4243,7 +4243,7 @@ and Footnotes */
 /* <<< Collapse Indicators
 ──────────────────────────────────────────────────── */
 /* hide collapse indicators until hovered/active line */
-body:not(.permanently-show-collapse-indicators) :is(li, h1, h2, h3, h4, h5, h6):not(:hover) div:not(.is-collapsed) > .collapse-indicator,
+body:not(.permanently-show-collapse-indicators) div:not(.is-collapsed) > :is(li, h1, h2, h3, h4, h5, h6):not(:hover) > .collapse-indicator,
 body:not(.permanently-show-collapse-indicators) .cm-line:not(:hover):not(.cm-active) div:not(.is-collapsed) > .collapse-indicator {
 	opacity: 0;
 }
